# VRP

./: .gitignore  CITATION.cff  README.md
Medical-VRP-SA_Cplex_Gurobi/: .env  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
Medical-VRP-SA_Cplex_Gurobi/cplex_solver/: cplex_solver.py
Medical-VRP-SA_Cplex_Gurobi/data/excel/: medical_vrp_data.xlsx
Medical-VRP-SA_Cplex_Gurobi/data/json/: medical_vrp_data.json
Medical-VRP-SA_Cplex_Gurobi/data/txt/: medical_vrp_data.txt
Medical-VRP-SA_Cplex_Gurobi/gurobi_solver/: gurobi_solver.py
Medical-VRP-SA_Cplex_Gurobi/heuristics/: __init__.py  common.py
Medical-VRP-SA_Cplex_Gurobi/heuristics/pso/: Readme.md  __init.py  pso.py
Medical-VRP-SA_Cplex_Gurobi/heuristics/sa/: Readme.md  __init__.py  sa.py
Medical-VRP-SA_Cplex_Gurobi/math_model/: Mathmodel.docx
Medical-VRP-SA_Cplex_Gurobi/scripts/: run_cplex.py  run_gurobi.py  run_pso.py  run_sa.py
Medical-VRP-SA_Cplex_Gurobi/utils/: __init__.py  io.py  plot.py
SMT-Routing-Optimization/: README.md  pyproject.toml  requirements.txt
SMT-Routing-Optimization/cplex_solver/: cplex_solver.py
SMT-Routing-Optimization/data/: C12D15.xlsx
SMT-Routing-Optimization/heuristics/: tabu.py  utils.py
SMT-Routing-Optimization/heuristics/aco/: README.md  aco.py
SMT-Routing-Optimization/heuristics/aco_ts/: README.md  aco_ts.py
SMT-Routing-Optimization/heuristics/ga/: ga_smt.py
SMT-Routing-Optimization/math model/: MATH MODEL.docx
SMT-Routing-Optimization/utils/: io.py  plot.py
